manifests/kuma-counter.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kuma-demo
  annotations:
    kuma.io/sidecar-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: kuma-demo
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
      # annotations:
      #   kuma.io/sidecar-injection: enabled
    spec:
      containers:
        - name: redis
          image: "redis"
          ports:
            - name: tcp
              containerPort: 6379
          lifecycle:
            postStart:
              exec:
                command: ["/usr/local/bin/redis-cli", "set", "zone", "local"]
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: kuma-demo
spec:
  selector:
    app: redis
  ports:
    - port: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  namespace: kuma-demo
spec:
  selector:
    matchLabels:
      app: demo-app
  replicas: 1
  template:
    metadata:
      labels:
        app: demo-app
      # annotations:
      #   kuma.io/sidecar-injection: enabled
    spec:
      containers:
        - name: demo-app
          image: "thefosk/kuma-demo"
          ports:
            - name: http
              containerPort: 5000
#---
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: demo-app-v2
#  namespace: kuma-demo
#spec:
#  selector:
#    matchLabels:
#      app: demo-app
#  replicas: 1
#  template:
#    metadata:
#      labels:
#        app: demo-app
#        version: v2
#    spec:
#      containers:
#        - name: demo-app
#          image: "thefosk/kuma-demo"
#          env:
#            - name: REDIS_HOST
#              value: "redis.kuma-demo.svc.cluster.local"
#            - name: REDIS_PORT
#              value: "6379"
#            - name: APP_VERSION
#              value: "2.0"
#            - name: APP_COLOR
#              value: "#5da36f"
#          ports:
#            - name: http
#              containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: kuma-demo
  annotations:
    5000.service.kuma.io/protocol: http
    ingress.kubernetes.io/service-upstream: "true"
spec:
  selector:
    app: demo-app
  ports:
    - port: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter-ingress
  namespace: kuma-demo
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service: 
              name: demo-app
              port:
                number: 5000
